proyecto_final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> FUNCION ID LPAREN RPAREN LBRACE declaraciones RBRACE
Rule 2     declaraciones -> declaraciones declaracion
Rule 3     declaraciones -> declaracion
Rule 4     declaracion -> ID EQUAL expresion SEMICOLON
Rule 5     declaracion -> ENTERO ID EQUAL expresion SEMICOLON
Rule 6     declaracion -> ENTERO ID SEMICOLON
Rule 7     expresion -> expresion PLUS expresion
Rule 8     expresion -> expresion MINUS expresion
Rule 9     expresion -> NUMBER
Rule 10    expresion -> ID

Terminals, with rules where they appear

ENTERO               : 5 6
EQUAL                : 4 5
FUNCION              : 1
ID                   : 1 4 5 6 10
LBRACE               : 1
LPAREN               : 1
MINUS                : 8
NUMBER               : 9
PLUS                 : 7
RBRACE               : 1
RPAREN               : 1
SEMICOLON            : 4 5 6
error                : 

Nonterminals, with rules where they appear

declaracion          : 2 3
declaraciones        : 1 2
expresion            : 4 5 7 7 8 8
programa             : 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . FUNCION ID LPAREN RPAREN LBRACE declaraciones RBRACE

    FUNCION         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> FUNCION . ID LPAREN RPAREN LBRACE declaraciones RBRACE

    ID              shift and go to state 3


state 3

    (1) programa -> FUNCION ID . LPAREN RPAREN LBRACE declaraciones RBRACE

    LPAREN          shift and go to state 4


state 4

    (1) programa -> FUNCION ID LPAREN . RPAREN LBRACE declaraciones RBRACE

    RPAREN          shift and go to state 5


state 5

    (1) programa -> FUNCION ID LPAREN RPAREN . LBRACE declaraciones RBRACE

    LBRACE          shift and go to state 6


state 6

    (1) programa -> FUNCION ID LPAREN RPAREN LBRACE . declaraciones RBRACE
    (2) declaraciones -> . declaraciones declaracion
    (3) declaraciones -> . declaracion
    (4) declaracion -> . ID EQUAL expresion SEMICOLON
    (5) declaracion -> . ENTERO ID EQUAL expresion SEMICOLON
    (6) declaracion -> . ENTERO ID SEMICOLON

    ID              shift and go to state 7
    ENTERO          shift and go to state 10

    declaraciones                  shift and go to state 8
    declaracion                    shift and go to state 9

state 7

    (4) declaracion -> ID . EQUAL expresion SEMICOLON

    EQUAL           shift and go to state 11


state 8

    (1) programa -> FUNCION ID LPAREN RPAREN LBRACE declaraciones . RBRACE
    (2) declaraciones -> declaraciones . declaracion
    (4) declaracion -> . ID EQUAL expresion SEMICOLON
    (5) declaracion -> . ENTERO ID EQUAL expresion SEMICOLON
    (6) declaracion -> . ENTERO ID SEMICOLON

    RBRACE          shift and go to state 12
    ID              shift and go to state 7
    ENTERO          shift and go to state 10

    declaracion                    shift and go to state 13

state 9

    (3) declaraciones -> declaracion .

    RBRACE          reduce using rule 3 (declaraciones -> declaracion .)
    ID              reduce using rule 3 (declaraciones -> declaracion .)
    ENTERO          reduce using rule 3 (declaraciones -> declaracion .)


state 10

    (5) declaracion -> ENTERO . ID EQUAL expresion SEMICOLON
    (6) declaracion -> ENTERO . ID SEMICOLON

    ID              shift and go to state 14


state 11

    (4) declaracion -> ID EQUAL . expresion SEMICOLON
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . NUMBER
    (10) expresion -> . ID

    NUMBER          shift and go to state 17
    ID              shift and go to state 15

    expresion                      shift and go to state 16

state 12

    (1) programa -> FUNCION ID LPAREN RPAREN LBRACE declaraciones RBRACE .

    $end            reduce using rule 1 (programa -> FUNCION ID LPAREN RPAREN LBRACE declaraciones RBRACE .)


state 13

    (2) declaraciones -> declaraciones declaracion .

    RBRACE          reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    ID              reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    ENTERO          reduce using rule 2 (declaraciones -> declaraciones declaracion .)


state 14

    (5) declaracion -> ENTERO ID . EQUAL expresion SEMICOLON
    (6) declaracion -> ENTERO ID . SEMICOLON

    EQUAL           shift and go to state 18
    SEMICOLON       shift and go to state 19


state 15

    (10) expresion -> ID .

    SEMICOLON       reduce using rule 10 (expresion -> ID .)
    PLUS            reduce using rule 10 (expresion -> ID .)
    MINUS           reduce using rule 10 (expresion -> ID .)


state 16

    (4) declaracion -> ID EQUAL expresion . SEMICOLON
    (7) expresion -> expresion . PLUS expresion
    (8) expresion -> expresion . MINUS expresion

    SEMICOLON       shift and go to state 20
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22


state 17

    (9) expresion -> NUMBER .

    SEMICOLON       reduce using rule 9 (expresion -> NUMBER .)
    PLUS            reduce using rule 9 (expresion -> NUMBER .)
    MINUS           reduce using rule 9 (expresion -> NUMBER .)


state 18

    (5) declaracion -> ENTERO ID EQUAL . expresion SEMICOLON
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . NUMBER
    (10) expresion -> . ID

    NUMBER          shift and go to state 17
    ID              shift and go to state 15

    expresion                      shift and go to state 23

state 19

    (6) declaracion -> ENTERO ID SEMICOLON .

    RBRACE          reduce using rule 6 (declaracion -> ENTERO ID SEMICOLON .)
    ID              reduce using rule 6 (declaracion -> ENTERO ID SEMICOLON .)
    ENTERO          reduce using rule 6 (declaracion -> ENTERO ID SEMICOLON .)


state 20

    (4) declaracion -> ID EQUAL expresion SEMICOLON .

    RBRACE          reduce using rule 4 (declaracion -> ID EQUAL expresion SEMICOLON .)
    ID              reduce using rule 4 (declaracion -> ID EQUAL expresion SEMICOLON .)
    ENTERO          reduce using rule 4 (declaracion -> ID EQUAL expresion SEMICOLON .)


state 21

    (7) expresion -> expresion PLUS . expresion
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . NUMBER
    (10) expresion -> . ID

    NUMBER          shift and go to state 17
    ID              shift and go to state 15

    expresion                      shift and go to state 24

state 22

    (8) expresion -> expresion MINUS . expresion
    (7) expresion -> . expresion PLUS expresion
    (8) expresion -> . expresion MINUS expresion
    (9) expresion -> . NUMBER
    (10) expresion -> . ID

    NUMBER          shift and go to state 17
    ID              shift and go to state 15

    expresion                      shift and go to state 25

state 23

    (5) declaracion -> ENTERO ID EQUAL expresion . SEMICOLON
    (7) expresion -> expresion . PLUS expresion
    (8) expresion -> expresion . MINUS expresion

    SEMICOLON       shift and go to state 26
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22


state 24

    (7) expresion -> expresion PLUS expresion .
    (7) expresion -> expresion . PLUS expresion
    (8) expresion -> expresion . MINUS expresion

    SEMICOLON       reduce using rule 7 (expresion -> expresion PLUS expresion .)
    PLUS            reduce using rule 7 (expresion -> expresion PLUS expresion .)
    MINUS           reduce using rule 7 (expresion -> expresion PLUS expresion .)

  ! PLUS            [ shift and go to state 21 ]
  ! MINUS           [ shift and go to state 22 ]


state 25

    (8) expresion -> expresion MINUS expresion .
    (7) expresion -> expresion . PLUS expresion
    (8) expresion -> expresion . MINUS expresion

    SEMICOLON       reduce using rule 8 (expresion -> expresion MINUS expresion .)
    PLUS            reduce using rule 8 (expresion -> expresion MINUS expresion .)
    MINUS           reduce using rule 8 (expresion -> expresion MINUS expresion .)

  ! PLUS            [ shift and go to state 21 ]
  ! MINUS           [ shift and go to state 22 ]


state 26

    (5) declaracion -> ENTERO ID EQUAL expresion SEMICOLON .

    RBRACE          reduce using rule 5 (declaracion -> ENTERO ID EQUAL expresion SEMICOLON .)
    ID              reduce using rule 5 (declaracion -> ENTERO ID EQUAL expresion SEMICOLON .)
    ENTERO          reduce using rule 5 (declaracion -> ENTERO ID EQUAL expresion SEMICOLON .)

